<resources>

    <string name="app_name">practica3</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>

    
    <string name="main_play">Jugar</string>
    <string name="main_scores">Puntajes</string>
    <string name="main_settings">Configuración</string>
    <string name="main_credits">Creditos</string>
    <string name="settings_name">Nombre:</string>
    <string name="nombre_aqui">Su nombre aqui</string>
    <string name="settings_ManyTimes">Select how many times can you ask for help:</string>
    <string name="addFriend">Agregar amigo</string>
    
    <string name="play_pregunta">¿Cual es la respuesta que hay que elegir para esta pregunta de estas cuatro opciones?</string>
    <string name="play_apuesta">Juega por:</string>
    <string name="play_npregunta">Pregunta</string>
    
    <string name="play_telefono">Telefono</string>
    <string name="play_cincuenta">Cincuenta</string>
    <string name="play_audiencia">Audiencia</string>
    
    <string name="scores_borrar">Borrar</string>
    <string name="titulo">¿Quién quiere ser millonario?</string>
</resources>
