<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <RelativeLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
    />
    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="76dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usuario"
        android:layout_alignBottom="@+id/usuario"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:text="@string/settings_name"
        android:textColor="#000000" />

    <Button
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="80dp"
        android:onClick="onClickAddFriend"
        android:text="@string/addFriend" />

    <EditText
        android:id="@+id/friendAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addFriend"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <Spinner
        android:id="@+id/manyTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/usuario"
        android:entries="@array/manyTimes" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manyTimes"
        android:layout_alignParentLeft="true"
        android:lines="2"
        android:minLines="2"
        android:paddingLeft="5dp"
        android:text="@string/settings_ManyTimes"
        android:textColor="#000000" />

</RelativeLayout>
