<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="clip_vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_npregunta"
            android:textColor="#000000"
            android:textSize="20dp" />

    	<TextView
    	    android:id="@+id/play_numPregunta"
    	    android:layout_width="wrap_content"
    	    android:layout_height="fill_parent"
    	    android:layout_alignLeft="@+id/textView2"
    	    android:paddingLeft="10dp"
    	    android:text="1"
    	    android:textColor="#000000"
    	    android:textSize="20dp" /></LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/play_apuesta"
            android:layout_alignParentLeft="true"
            android:text="@string/play_apuesta"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/play_apuesta"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@+id/textView1"
            android:paddingLeft="4dp"
            android:text="100"
            android:textColor="#000000"
            android:textSize="15dp" />

    	<TextView
    	    android:id="@+id/euro"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/play_apuesta"
    	    android:text="€"
    	    android:textColor="#000000"
    	    android:textSize="15dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/play_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/play_pregunta"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />
    
    <Button
        android:id="@+id/answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClickPreguntaSeleccionada"
        android:text="Respuesta 4" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:onClick="onClickPreguntaSeleccionada"
        android:text="Respuesta 3" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:onClick="onClickPreguntaSeleccionada"
        android:text="Respuesta 2" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:onClick="onClickPreguntaSeleccionada"
        android:text="Respuesta 1" />

</RelativeLayout>
